add status for all users

--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -17,6 +17,7 @@
     <script src="../../Scripts/changelog_tables.js"></script>
     <script src="../../Scripts/add_user_form.js"></script>
     <script src="../../Scripts/all_statuses_table.js"></script>
+    <script src="../../Scripts/add_status_form.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
     <link rel="stylesheet" href="../../Content/Site.css">
@@ -147,17 +148,12 @@
                             <div class="container well nested-tabs">
                                 <div id="status-content">
                                     <ul class="tabs nav nav-tabs" data-tabs="tabs">
-                                        <li class="active"><a href="#add-status" data-toggle="tab">Add Status</a></li>
+                                        <li class="active"><a href="#see-all-statuses" data-toggle="tab">All Statuses</a></li>
+                                        <li><a href="#add-status" data-toggle="tab">Add Status</a></li>
                                         <li><a href="#remove-status" data-toggle="tab">Remove Status</a></li>
                                     </ul>
                                     <div class="tab-content">
-                                        <div class="tab-pane active" id="add-status">
-                                            <h3>Add Status</h3>
-                                            <div class="container nested-tabs">
-                                                <form id="add-status-form" action="/Admin/AddNewStatusForSingleUser" method="post" role="form">
-
-                                                </form>
-                                            </div>
+                                        <div class="tab-pane active" id="see-all-statuses">
                                             <h3>All Statuses</h3>
                                             <div class="container nested-tabs">
                                                 <div class="panel panel-default">
@@ -166,12 +162,36 @@
                                                         <tr>
                                                             <th>#</th>
                                                             <th>Status name</th>
-                                                            <th>Worksite</th>
+                                                            <th>Users Available</th>
                                                         </tr>
                                                         <!-- Statuses go here. -->
                                                     </table>
                                                 </div>
                                             </div>
+                                        </div>
+                                        <div class="tab-pane" id="add-status">
+                                            <h3>Add Status</h3>
+                                            <div class="container nested-tabs">
+                                                <!-- Add Status Form -->
+                                                <form id="add-status-form" action="/Admin/AddStatus" method="post" role="form">
+                                                    <label for="new_status_name">Status Name</label>
+                                                    <input type="text" id="new_status_name" class="form-control" placeholder="At John's place" name="statusName" required /><br />
+                                                    <label for="new_status_worksite">Are people considered <i>available</i> when assigned this status?</label>&nbsp;
+                                                    <input type="checkbox" id="new_status_worksite" name="available" />
+                                                    <br /><br />
+                                                    <label for="add_status_for_one_or_all">Add for all users</label>&nbsp;
+                                                    <input type="checkbox" id="add_status_for_one_or_all" checked />
+                                                    <hr />
+                                                    <div class="ui-widget">
+                                                        <label for="remove-user-autocomplete">Which user?</label>
+                                                        <input id="add-status-user-autocomplete" class="form-control" placeholder="First or Last name" required>
+                                                        <input type="hidden" name="userID" id="add-status-userID" />
+                                                    </div>
+                                                    <br /><br />
+                                                    <button id="add-status-submit" type="submit" class="btn btn-default">Add Status</button>
+                                                </form>
+                                            </div>
+                                            
                                         </div>
                                         <div class="tab-pane" id="remove-status">
                                             <h3>Remove Status</h3>
