--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -66,7 +66,7 @@
                                 <div class="panel-body">
                                     <div class="container-switch">
                                         <p>
-                                        @if (core.Status.Name == "In Office")
+                                        @if (core.Status.Available == true)
                                         {
                                             <input type="checkbox" name="staff-state" disabled="true" checked data-on-color="success" data-off-color="warning" data-on-text="In" data-off-text="Out">
                                         }
