--- a/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Admin/Admin.cshtml
@@ -21,6 +21,10 @@
     <script src="../../Scripts/add_status_autocomplete.js"></script>
     <script src="../../Scripts/add_status_form.js"></script>
     <script src="../../Scripts/remove_status_autocomplete.js"></script>
+    <script src="../../Scripts/all_locations_table.js"></script>
+    <script src="../../Scripts/add_location_form.js"></script>
+    <script src="../../Scripts/add_location_autocomplete.js"></script>
+    <script src="../../Scripts/remove_location_autocomplete.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="http://css-spinners.com/css/spinner/spinner.css" type="text/css">
     <link rel="stylesheet" href="../../Content/Site.css">
@@ -51,21 +55,21 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Status Board", "Index", "Home")</li>
-                    <li>@Html.ActionLink("Administration", "Admin", "Admin")</li>
+                    <li><a href="/Admin/Admin">Administration <span class="glyphicon glyphicon-refresh"></span></a></li>
                 </ul>
             </div>
         </div>
     </div>
     <br />
 
-    @if(ViewBag.Error != null)
+    @if(ViewBag.Message != null)
     {
         <div class="row" id="admin_error_window">
             <div class="container-fluid">
                 <div class="col-md-12">
-                    <div class="container well red_text">
-                        @ViewBag.Error
-                        <button type="button" id="admin_error_window_close" class="btn btn-default pull-right">&times;</button>
+                    <div class="container well">
+                        @ViewBag.Message
+                        <button type="button" id="admin_error_window_close" class="btn btn-danger pull-right">&times;</button>
                     </div>
                 </div>
             </div>
@@ -165,7 +169,7 @@
                             <div class="container well nested-tabs">
                                 <div id="status-content">
                                     <ul class="tabs nav nav-tabs" data-tabs="tabs">
-                                        <li class="active"><a href="#see-all-statuses" data-toggle="tab">All Statuses</a></li>
+                                        <li class="active"><a href="#see-all-statuses" data-toggle="tab">See All</a></li>
                                         <li><a href="#add-status" data-toggle="tab">Add Status</a></li>
                                         <li><a href="#remove-status" data-toggle="tab">Remove Status</a></li>
                                     </ul>
@@ -180,6 +184,7 @@
                                                             <th>#</th>
                                                             <th>Status name</th>
                                                             <th>Users Available</th>
+                                                            <th>Edit</th>
                                                         </tr>
                                                         <!-- Statuses go here. -->
                                                     </table>
@@ -221,6 +226,8 @@
                                                     <div class="ui-widget">
                                                         <label for="remove-status-user-autocomplete">Which Status?</label>
                                                         <input id="remove-status-user-autocomplete" class="form-control" placeholder="Status name" required>
+                                                        <br />
+                                                        <p id="remove-status-userID-display"></p>
                                                         <input type="hidden" name="statusID" id="remove-status-userID" />
                                                     </div>
                                                     <br />
@@ -240,19 +247,67 @@
                             <div class="container well nested-tabs">
                                 <div id="location-content">
                                     <ul class="tabs nav nav-tabs" data-tabs="tabs">
-                                        <li class="active"><a href="#add-location" data-toggle="tab">Add Location</a></li>
+                                        <li class="active"><a href="#all-locations" data-toggle="tab">See All</a></li>
+                                        <li><a href="#add-location" data-toggle="tab">Add Location</a></li>
                                         <li><a href="#remove-location" data-toggle="tab">Remove Location</a></li>
-                                        <li><a href="#modify-location" data-toggle="tab">Modify Location</a></li>
                                     </ul>
                                     <div class="tab-content">
-                                        <div class="tab-pane active" id="add-location">
+                                        <div class="tab-pane active" id="all-locations">
+                                            <h3>All Locations</h3>
+                                            <div class="container nested-tabs">
+                                                <div class="panel panel-default">
+                                                    <!-- Table -->
+                                                    <table id="all-locations-table" class="table table-striped">
+                                                        <tr>
+                                                            <th>#</th>
+                                                            <th>Location name</th>
+                                                            <th>Edit</th>
+                                                        </tr>
+                                                        <!-- Locations go here. -->
+                                                    </table>
+                                                </div>
+                                            </div>
+                                        </div>
+                                        <div class="tab-pane" id="add-location">
                                             <h3>Add Location</h3>
+                                            <div class="container nested-tabs">
+                                                <!-- Add Location Form -->
+                                                <form id="add-location-form" action="/Admin/AddLocation" method="post" role="form">
+                                                    <hr />
+                                                    <label for="add_location_for_one_or_all">Add for all users</label>&nbsp;
+                                                    <input type="checkbox" id="add_location_for_one_or_all" checked />
+                                                    <hr />
+                                                    <label for="new_location_name">Location Name</label>
+                                                    <input type="text" id="new_location_name" class="form-control" placeholder="Location name" name="locationName" required /><br />
+                                                    <hr />
+                                                    <fieldset id="fldst_location_for_single_user" disabled="disabled">
+                                                        <div class="ui-widget">
+                                                            <label for="add-location-user-autocomplete">Which user?</label>
+                                                            <input id="add-location-user-autocomplete" class="form-control" placeholder="First or Last name" required>
+                                                            <input type="hidden" name="userID" id="add-location-userID" />
+                                                        </div>
+                                                    </fieldset>
+                                                    <br /><br />
+                                                    <button id="add-location-submit" type="submit" class="btn btn-default">Add Location</button>
+                                                </form>
+                                            </div>
                                         </div>
                                         <div class="tab-pane" id="remove-location">
                                             <h3>Remove Location</h3>
-                                        </div>
-                                        <div class="tab-pane" id="modify-location">
-                                            <h3>Modify Location</h3>
+                                            <div class="container nested-tabs">
+                                                <!-- Remove Location Form -->
+                                                <form id="remove-location-form" action="/Admin/RemoveLocation" method="post" role="form">
+                                                    <div class="ui-widget">
+                                                        <label for="remove-location-user-autocomplete">Which Location?</label>
+                                                        <input id="remove-location-user-autocomplete" class="form-control" placeholder="Location name" required>
+                                                        <br />
+                                                        <p id="remove-location-userID-display"></p>
+                                                        <input type="hidden" name="locationID" id="remove-location-userID" />
+                                                    </div>
+                                                    <br />
+                                                    <button id="remove-location-submit" type="submit" class="btn btn-default">Remove Location</button>
+                                                </form>
+                                            </div>
                                         </div>
                                     </div>
                                 </div>
@@ -323,9 +378,10 @@
                 </div>
             </div>
         </div>
+
         <div class="row">
             <div class="container">
-                <!-- Modal -->
+                <!--------------- Edit User Modal---------------------->
                 <div class="modal fade" id="edit-user-modal" role="dialog">
                     <div class="modal-dialog">
                         <!-- Modal content-->
@@ -354,7 +410,7 @@
                                         <br />
                                     </div>
 
-                                    <button id="update-user-button" type="submit" class="btn btn-success"><span class="glyphicon glyphicon-floppy-disk"></span> Update & Save</button>
+                                    <button id="update-user-button" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-floppy-disk"></span> Update & Save</button>
                                 </form>
                             </div>
                             <!-- Modal Footer -->
@@ -367,6 +423,79 @@
                 <!-- /modal -->
             </div>
         </div>
+        <!-- /row -->
+
+        <div class="row">
+            <div class="container">
+                <!--------------- Edit Status Modal---------------------->
+                <div class="modal fade" id="edit-status-modal" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header" id="admin-edit-status-modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 id="edit-status-modal-title">Edit: </h4>
+                            </div>
+                            <!-- Modal Content -->
+                            <div class="modal-body" style="padding:40px 50px;">
+                                <form id="edit-status-form" action="/Admin/UpdateStatus" method="post" role="form">
+                                    <div class="form-group">
+                                        <label for="edit-status-name">Name</label>
+                                        <input id="edit-status-name" type="text" name="name" class="form-control" disabled="disabled" />
+                                        <br />
+                                        <label for="edit-status-available">People are considered <i>available</i> here:</label>
+                                        <input type="checkbox" id="edit-status-available" name="available" disabled="disabled" />
+                                        <br />
+                                    </div>
+                                    <button id="update-status-button" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-floppy-disk"></span> Update & Save</button>
+                                </form>
+                            </div>
+                            <!-- Modal Footer -->
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /modal -->
+            </div>
+        </div>
+        <!-- /row -->
+
+        <div class="row">
+            <div class="container">
+                <!--------------- Edit Location Modal---------------------->
+                <div class="modal fade" id="edit-location-modal" role="dialog">
+                    <div class="modal-dialog">
+                        <!-- Modal content-->
+                        <div class="modal-content">
+                            <div class="modal-header" id="admin-edit-location-modal-header">
+                                <button type="button" class="close" data-dismiss="modal">&times;</button>
+                                <h4 id="edit-location-modal-title">Edit: </h4>
+                            </div>
+                            <!-- Modal Content -->
+                            <div class="modal-body" style="padding:40px 50px;">
+                                <form id="edit-location-form" action="/Admin/UpdateLocation" method="post" role="form">
+                                    <div class="form-group">
+                                        <label for="edit-location-name">Name</label>
+                                        <input id="edit-location-name" type="text" name="name" class="form-control" disabled="disabled" />
+                                        <br />
+                                    </div>
+                                    <button id="update-location-button" type="submit" class="btn btn-default"><span class="glyphicon glyphicon-floppy-disk"></span> Update & Save</button>
+                                </form>
+                            </div>
+                            <!-- Modal Footer -->
+                            <div class="modal-footer">
+                                <button type="submit" class="btn btn-danger btn-default pull-left" data-dismiss="modal"><span class="glyphicon glyphicon-remove"></span> Cancel</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /modal -->
+            </div>
+        </div>
+        <!-- /row -->
+
     </div>
     
 </body>
