--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -74,21 +74,42 @@
                         <div id="@core.UserID" class="panel-group staff-modules">
                             <div class="panel-default panel staff-modules-panels">
                                 <div class="panel-heading staff-name">
-                                    <p class="staff-name-text">@core.User.FirstName @core.User.LastName</p>
-                                    <p>
-                                        <small>
-                                            @core.Status.Name 
-                                            <br /> 
-                                            @if(core.LocationID != 1)
-                                            {
-                                                @core.Location.Name
-                                            }
-                                            else
-                                            {
-                                                <br />
-                                            }
-                                        </small>
-                                    </p>
+                                    <div class="row">
+                                        <div class="col-xs-12">
+                                            <p class="staff-name-text">
+                                                <b>@core.User.FirstName @core.User.LastName</b>
+                                            </p>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-xs-6">
+                                            <p>
+                                                <small>
+                                                    @core.Status.Name
+                                                    <br />
+                                                    @if (core.LocationID != 1)
+                                                    {
+                                                        @core.Location.Name
+                                                    }
+                                                    else
+                                                    {
+                                                        <br />
+                                                    }
+                                                </small>
+                                            </p>
+                                        </div>
+                                        <div class="col-xs-6">
+                                            <p>
+                                                @if (core.IntendedEndTime != null)
+                                                {
+                                                    DateTime eta = (DateTime)core.IntendedEndTime;
+                                                    <small><i>ETA </i><span class="glyphicon glyphicon-time"></span><br />@eta.ToShortTimeString()</small>
+                                                }
+                                            </p>
+                                        </div>
+                                    </div>
+                                    
+                                    
                                 </div>
                                 <div class="panel-body">
                                     <div class="container-switch">
@@ -151,7 +172,7 @@
                                     <br />
                                     <div class="row">
                                         <div class="col-xs-8" id="time_display">
-                                            <label for="time_slider">Return at: <span id="time_slider_val">Not applicable</span></label>
+                                            <label for="time_slider">Return <span class="glyphicon glyphicon-time"> </span> <span id="time_slider_val">Not applicable</span></label>
                                         </div>
                                         <div class="col-xs-4">
                                             <button id="cancel_time" class="btn btn-default form-control">Cancel</button>
@@ -162,7 +183,7 @@
                                         <div class="col-xs-12">
                                             <input id="time_slider" class="form-control" data-slider-id='time_slider' type="text" data-slider-orientation="horizontal" />
                                             <!-- Hidden field for datetime information -->
-                                            <input type="hidden" id="time_value" value="0"/>
+                                            <input type="hidden" id="time_value" name="returnTime" value=""/>
                                         </div>
                                     </div>
                                     <br />
