status updating refined server side

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -57,6 +57,7 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Status Board", "Index", "Home")</li>
                     <li>@Html.ActionLink("Administration", "Admin", "Admin")</li>
+                    <li><a href="http://goo.gl/forms/dOYZerw6Hz" target="_blank">Submit Feedback <span class="glyphicon glyphicon-list-alt"></span></a></li>
                 </ul>
             </div>
         </div>
