commit for demonstration purposes

--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -67,6 +67,7 @@
         <div class="row">
 
             <!-- We require a variable to uniquely identify each module (UserID) -->
+            <!-- This comment is for no reason. -->
 
             @foreach(var core in @Model)
             {
