--- a/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/LoginAdmin/LoginAdmin.cshtml
@@ -12,6 +12,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
     <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     <script src="../../Scripts/jquery-ui.min.js"></script>
+    <script src="../../Scripts/admin_error_window.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
     <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/jquery-ui.min.css" />
@@ -37,7 +38,7 @@
             <div class="col-xs-6 col-xs-offset-3 col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
                 <div class="well" id="login_form">
                     <!-- Login Form. -->
-                    <form id="add-user-form" action="/Admin/AddNewUser" method="post" role="form">
+                    <form id="add-user-form" action="/LoginAdmin/Login" method="post" role="form">
                         <h3>Login</h3>
                         <p>You must login to see the administration controls.</p>
                         <div class="form-group container">
@@ -45,7 +46,7 @@
                             <input type="text" id="username_input" class="form-control" placeholder="CloudStaff1" name="username" required />
                             <br />
                             <label for="password_input">Password</label>
-                            <input type="text" id="password_input" class="form-control" placeholder="" name="password" required />
+                            <input type="password" id="password_input" class="form-control" placeholder="" name="password" required />
                             <br />
                             <!-- Submit and Cancel buttons -->
                             <button id="login_submit" type="submit" class="btn btn-success"><span class="glyphicon glyphicon-check"></span> Login</button>
