--- a/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
+++ b/ABLCloudStaff/ABLCloudStaff/Views/Home/Index.cshtml
@@ -13,7 +13,6 @@
     <script src="../../Scripts/less.js"></script>
     <script src="../../Scripts/jquery-ui.min.js"></script>
     <link rel="stylesheet" href="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <link rel="stylesheet" href="../../Content/Site.css">
     <link rel="stylesheet" href="../../Content/bootstrap-switch.css">
     <link rel="stylesheet" href="../../Content/slider.css"/>
     <script src="../../Scripts/bootstrap-switch.min.js"></script>
@@ -21,6 +20,7 @@
     <script type="text/javascript" src="../../Scripts/init_modal.js"></script>
     <script src="../../Scripts/bootstrap-slider.js"></script>
     <script src="../../Scripts/time_slider.js"></script>
+    <link rel="stylesheet" href="../../Content/Site.css">
     
     <title>CloudStaff</title>
 
@@ -52,7 +52,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("CloudStaff", "Index", "Home", null, new { @class = "navbar-brand" })
+                <div id="cloudstaff_title">@Html.ActionLink("CloudStaff", "Index", "Home", null, new { @class = "navbar-brand" })</div>
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -63,7 +63,9 @@
             </div>
         </div>
     </div>
+
     <br />
+
     <div class="container-fluid">
         <div class="row">
 
@@ -71,7 +73,7 @@
 
             @foreach(var core in @Model)
             {
-                <div class="col-md-2">
+                <div class="col-xs-4 col-sm-3 col-md-2 col-lg-2">
                     <div class="container-fluid">
                         <!-- When clicked, this is the invoker. -->
                         <div class="panel-group top-half-of-panel">
